Add repository supports commit hash and depth

--- a/org.archicontribs.modelrepository/build.properties
+++ b/org.archicontribs.modelrepository/build.properties
@@ -4,6 +4,8 @@ bin.includes = META-INF/,\
                img/,\
                plugin.properties,\
                lib/,\
-               org.archicontribs.modelrepository.jar
+               org.archicontribs.modelrepository.jar,\
+               lib/org.eclipse.jgit-7.5.0.202512021534-r.jar,\
+               lib/org.eclipse.jgit.ssh.apache-7.5.0.202512021534-r.jar
 output.org.archicontribs.modelrepository.jar = bin/
 source.org.archicontribs.modelrepository.jar = src/
